# aerofans

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
client/front-end/: package-lock.json  package.json
nodeserver/: .env  package-lock.json  package.json  server.js  tsconfig.json
nodeserver/src/: server.ts
nodeserver/sslcert/: selfsigned.crt  selfsigned.key
rustfrontend/: .gitignore  Cargo.toml  Dockerfile  index.html
rustfrontend/src/: main.rs  model.rs
rustfrontend/src/components/: comment.rs  delete_post.rs  header.rs  make_post.rs  mod.rs  post.rs
rustfrontend/src/pages/: all_posts.rs  auth.rs  mod.rs  not_found.rs  post_comments.rs  post_list.rs
rustserver/: .env  Cargo.toml  Dockerfile  cert.pem  key.pem
rustserver/migrations/: 20210717035738_create_post.sql  20210717141525_create_replies.sql  20210718192206_create.sql
rustserver/src/: db.rs  main.rs  model.rs  routes.rs
rustserver/src/controller/: auth.rs  mod.rs  post.rs  reply.rs
rustserver/src/model/: mod.rs  post.rs  reply.rs  token.rs  user.rs
src/: main.rs
