[package]
name = "rustfrontend"
version = "0.1.0"
authors = ["naryand <naryand@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4"
serde = "1.0"
wasm-logger = "0.2"
yew = "0.18"