[package]
name = "rustfrontend"
version = "0.1.0"
authors = ["naryand <naryand@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
js-sys = "0.3"
reqwasm = "0.2"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.18"
yew-router = "0.15"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlFormElement", "HtmlCollection", "Element"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[profile.release]
opt-level = "s"
lto = true