[package]
name = "rustfrontend"
version = "0.1.0"
authors = ["naryand <naryand@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
reqwasm = "0.2"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = "0.19"
yew-router = "0.16"

log = "0.4.6"
wasm-logger = "0.2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[profile.release]
opt-level = "s"
lto = true