[package]
name = "aero_fans"
version = "0.1.0"
authors = ["naryand <naryand@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.4", features = ["runtime-actix-native-tls", "chrono", "postgres"]}