[package]
name = "rustserver"
version = "0.1.0"
authors = ["naryand <naryand@sfu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.3", features = ["openssl"]}
actix-cors = "0.5"
bcrypt = "0.10"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
futures = "0.3"
openssl = "0.10"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.4", features = ["runtime-actix-native-tls", "chrono", "postgres"]}